fix overflow

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -36,6 +36,7 @@ body
   padding: 0
 
   overflow: auto
+  overflow-x: hidden
   -webkit-overflow-scrolling: touch
 
 .wrap
@@ -101,6 +102,7 @@ $break-phone: 320
 
 .screens
   position: relative
+
   .left, .right
     display: inline-block
     position: absolute
@@ -120,7 +122,6 @@ $break-phone: 320
   margin-top: 40px
   position: relative
   text-align: center
-  //overflow: hidden
   .stars-bottom
     position: absolute
     top: 0
